# multithreading_projects

./: README.md
.github/workflows/: buildScript.bat  cmake-action.yml  testScript.bat
OSLab1/: CMakeLists.txt
OSLab1/Creator/: CMakeLists.txt  Creator.cpp  Creator.h
OSLab1/Entities/: CMakeLists.txt  ENTITIES.H  Entities.h  EntitiesOther.h
OSLab1/Main/: CMakeLists.txt  Main.h
OSLab1/Reporter/: CMakeLists.txt  EmployeeSalary.h  NegativeNumberException.h  Reporter.h  SalaryCalculator.h
OSLab1/Tests/: reporter_test.cpp  salary_calc_test.cpp
OSLab2/: CMakeLists.txt
OSLab2/Tests/: average_test.cpp  min_max_test.cpp  value_gen_functions.h
OSLab2/average/: CMakeLists.txt  average.h
OSLab2/entities/: CMakeLists.txt  entities.h
OSLab2/main/: CMakeLists.txt  main.cc  main.h
OSLab2/min_max/: CMakeLists.txt  min_max.cpp  min_max.h
OSLab2/thread_manager/: thread_manager.h
OSLab3/: CMakeLists.txt
OSLab3/main/: CMakeLists.txt  main.cpp
OSLab3/marker/: CMakeLists.txt  marker.cpp
OSLab3/thread_manager/: CMakeLists.txt  thread_manager.h
OSLab4/: CMakeLists.txt
OSLab4/OSLab4/: CMakeLists.txt  consts.cpp
OSLab4/OSLab4/Receiver/: CMakeLists.txt  receiver.cpp
OSLab4/OSLab4/Receiver/process/: process_manager.h
OSLab4/OSLab4/Sender/: CMakeLists.txt  sender.cpp
OSLab5/: CMakeLists.txt
OSLab5/OSLab5/: CMakeLists.txt  OSLab5.cpp  OSLab5.h
OSLab5/OSLab5/client/: CMakeLists.txt  client.cpp
OSLab5/OSLab5/common/: pipename.cpp
OSLab5/OSLab5/entities/: Command.cpp  Employee.cpp  EmployeeResponse.cpp
OSLab5/OSLab5/server/: CMakeLists.txt  server.cpp
OSLab5/OSLab5/server/process/: process_manager.h
OSLab5/OSLab5/server/thread/: thread_func.cpp  thread_manager.h
OScolloquimNumberOperations/: CMakeLists.txt
OScolloquimNumberOperations/OScolloquimNumberOperations/: CMakeLists.txt  OScolloquimNumberOperations.cpp
OScolloquimNumberOperations/OScolloquimNumberOperations/entities/file/: filemanager.h
OScolloquimNumberOperations/OScolloquimNumberOperations/entities/path_maker/: path_maker.h
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/: OScolloquimNumberOperations.cpp  OScolloquimNumberOperations.h
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/action_processor/: action_processor.h  opercode.cpp
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/consts/: regexpr.cpp
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/data_processor/: data_processor.h
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/file/: filemanager.h
colloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/file_data/: file_data.h
colloquiums/OScolloquiumMatrixOperations/: CMakeLists.txt
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/: CMakeLists.txt  OScolloquiumMatrixOperations.cpp  OScolloquiumMatrixOperations.h
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/matrix/: matrix.cpp  matrixCalculator.cpp  matrixException.cpp  matrixInputTask.cpp  matrixTask.cpp  matrixTaskPool.cpp
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/matrix/file/: matrixFileReader.cpp
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/matrix/manager/: matrixManager.cpp
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/matrix/thread/: calculateThread.cpp  threadConsts.cpp
colloquiums/OScolloquiumMatrixOperations/OScolloquiumMatrixOperations/matrix/validator/: matrixSizeValidator.cpp  matrixValidator.cpp
colloquiums/_Theory/: Colloquium26_10_23_V5.md
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/: CMakeLists.txt
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/action_processor/: action_processor.h
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/consts/: regexpr.cpp
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/data_processor/: data_processor.h
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/file/: filemanager.h
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/file_data/: file_data.h
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/payload_manipulator/: payload_manipulator.h
сolloquiums/OScolloquimNumberOperations/OScolloquimNumberOperations/entities/thread_manager/: thread_manager.h
(+3 files in other folders)
